--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "start": "node index.js"
   },
@@ -13,10 +16,13 @@
     "axios": "^1.3.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "cron": "^2.2.0",
     "ether": "^0.0.9",
     "ethers": "^6.0.8",
     "express": "^4.18.2",
-    "node-fetch": "^2.6.9"
+    "express-ws": "^5.0.2",
+    "node-fetch": "^2.6.9",
+    "ws": "^8.12.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
